test/media_service/config-beeline/sidecar.yaml
static_resources:
    listeners:
        - name: listener_0
          address:
              socket_address:
                  # Entrypoint for service through Envoy
                  address: 0.0.0.0
                  port_value: 9999
          filter_chains:
              - filters:
                    - name: envoy.filters.network.http_connection_manager
                      typed_config:
                          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                          http_filters:
                              - name: envoy.filters.http.router
                                typed_config:
                                    "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                          codec_type: auto
                          stat_prefix: ingress_http
                          route_config:
                              virtual_hosts:
                                  - name: service
                                    domains:
                                        - "*"
                                    routes:
                                        - match:
                                              prefix: "/unique-id-service"
                                          route:
                                              cluster: unique-id-service
                                        - match:
                                              prefix: "/movie-id-service"
                                          route:
                                              cluster: movie-id-service
                                        - match:
                                              prefix: "/movie-id-mongodb"
                                          route:
                                              cluster: movie-id-mongodb
                                        - match:
                                              prefix: "/movie-id-memcached"
                                          route:
                                              cluster: movie-id-memcached
                                        - match:
                                              prefix: "/user-mongodb"
                                          route:
                                              cluster: user-mongodb
                                        - match:
                                              prefix: "/user-memcached"
                                          route:
                                              cluster: user-memcached
                                        - match:
                                              prefix: "/text-service"
                                          route:
                                              cluster: text-service
                                        - match:
                                              prefix: "/rating-service"
                                          route:
                                              cluster: rating-service
                                        - match:
                                              prefix: "/rating-redis"
                                          route:
                                              cluster: rating-redis
                                        - match:
                                              prefix: "/compose-review-service"
                                          route:
                                              cluster: compose-review-service
                                        - match:
                                              prefix: "/compose-review-memcached"
                                          route:
                                              cluster: compose-review-memcached
                                        - match:
                                              prefix: "/review-storage-service"
                                          route:
                                              cluster: review-storage-service
                                        - match:
                                              prefix: "/review-storage-mongodb"
                                          route:
                                              cluster: review-storage-mongodb
                                        - match:
                                              prefix: "/review-storage-memcached"
                                          route:
                                              cluster: review-storage-memcached
                                        - match:
                                              prefix: "/user-review-service"
                                          route:
                                              cluster: user-review-service
                                        - match:
                                              prefix: "/user-review-mongodb"
                                          route:
                                              cluster: user-review-mongodb
                                        - match:
                                              prefix: "/user-review-redis"
                                          route:
                                              cluster: user-review-redis
                                        - match:
                                              prefix: "/movie-review-service"
                                          route:
                                              cluster: movie-review-service
                                        - match:
                                              prefix: "/movie-review-mongodb"
                                          route:
                                              cluster: movie-review-mongodb
                                        - match:
                                              prefix: "/movie-review-redis"
                                          route:
                                              cluster: movie-review-redis
                                        - match:
                                              prefix: "/cast-info-service"
                                          route:
                                              cluster: cast-info-service
                                        - match:
                                              prefix: "/cast-info-mongodb"
                                          route:
                                              cluster: cast-info-mongodb
                                        - match:
                                              prefix: "/cast-info-memcached"
                                          route:
                                              cluster: cast-info-memcached
                                        - match:
                                              prefix: "/plot-service"
                                          route:
                                              cluster: plot-service
                                        - match:
                                              prefix: "/plot-mongodb"
                                          route:
                                              cluster: plot-mongodb
                                        - match:
                                              prefix: "/plot-memcached"
                                          route:
                                              cluster: plot-memcached
                                        - match:
                                              prefix: "/movie-info-service"
                                          route:
                                              cluster: movie-info-service
                                        - match:
                                              prefix: "/movie-info-mongodb"
                                          route:
                                              cluster: movie-info-mongodb
                                        - match:
                                              prefix: "/movie-info-memcached"
                                          route:
                                              cluster: movie-info-memcached
                                        - match:
                                              prefix: "/page-service"
                                          route:
                                              cluster: page-service

    clusters:
        - name: unique-id-service
          type: STRICT_DNS
          lb_policy: ROUND_ROBIN
          load_assignment:
              cluster_name: unique-id-service
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: unique-id-service
                                      port_value: 9999

        - name: movie-id-service
          type: STRICT_DNS
          lb_policy: ROUND_ROBIN
          load_assignment:
              cluster_name: movie-id-service
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: movie-id-service
                                      port_value: 9999

        - name: movie-id-mongodb
          type: STRICT_DNS
          lb_policy: ROUND_ROBIN
          load_assignment:
              cluster_name: movie-id-mongodb
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: movie-id-mongodb
                                      port_value: 27017

        - name: movie-id-memcached
          type: STRICT_DNS
          lb_policy: ROUND_ROBIN
          load_assignment:
              cluster_name: movie-id-memcached
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: movie-id-memcached
                                      port_value: 11211

        - name: user-mongodb
          type: STRICT_DNS
          lb_policy: ROUND_ROBIN
          load_assignment:
              cluster_name: user-mongodb
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: user-mongodb
                                      port_value: 27017

        - name: user-memcached
          type: STRICT_DNS
          lb_policy: ROUND_ROBIN
          load_assignment:
              cluster_name: user-memcached
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: user-memcached
                                      port_value: 11211

        - name: text-service
          type: STRICT_DNS
          lb_policy: ROUND_ROBIN
          load_assignment:
              cluster_name: text-service
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: text-service
                                      port_value: 9999

        - name: rating-service
          type: STRICT_DNS
          lb_policy: ROUND_ROBIN
          load_assignment:
              cluster_name: rating-service
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: rating-service
                                      port_value: 9999

        - name: rating-redis
          type: STRICT_DNS
          lb_policy: ROUND_ROBIN
          load_assignment:
              cluster_name: rating-redis
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: rating-redis
                                      port_value: 6379

        - name: compose-review-service
          type: STRICT_DNS
          lb_policy: ROUND_ROBIN
          load_assignment:
              cluster_name: compose-review-service
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: compose-review-service
                                      port_value: 9999

        - name: compose-review-memcached
          type: STRICT_DNS
          lb_policy: ROUND_ROBIN
          load_assignment:
              cluster_name: compose-review-memcached
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: compose-review-memcached
                                      port_value: 11211

        - name: review-storage-service
          type: STRICT_DNS
          lb_policy: ROUND_ROBIN
          load_assignment:
              cluster_name: review-storage-service
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: review-storage-service
                                      port_value: 9999

        - name: review-storage-mongodb
          type: STRICT_DNS
          lb_policy: ROUND_ROBIN
          load_assignment:
              cluster_name: review-storage-mongodb
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: review-storage-mongodb
                                      port_value: 27017

        - name: review-storage-memcached
          type: STRICT_DNS
          lb_policy: ROUND_ROBIN
          load_assignment:
              cluster_name: review-storage-memcached
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: review-storage-memcached
                                      port_value: 11211

        - name: user-review-service
          type: STRICT_DNS
          lb_policy: ROUND_ROBIN
          load_assignment:
              cluster_name: user-review-service
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: user-review-service
                                      port_value: 9999

        - name: user-review-mongodb
          type: STRICT_DNS
          lb_policy: ROUND_ROBIN
          load_assignment:
              cluster_name: user-review-mongodb
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: user-review-mongodb
                                      port_value: 27017

        - name: user-review-redis
          type: STRICT_DNS
          lb_policy: ROUND_ROBIN
          load_assignment:
              cluster_name: user-review-redis
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: user-review-redis
                                      port_value: 6379

        - name: movie-review-service
          type: STRICT_DNS
          lb_policy: ROUND_ROBIN
          load_assignment:
              cluster_name: movie-review-service
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: movie-review-service
                                      port_value: 9999

        - name: movie-review-mongodb
          type: STRICT_DNS
          lb_policy: ROUND_ROBIN
          load_assignment:
              cluster_name: movie-review-mongodb
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: movie-review-mongodb
                                      port_value: 27017

        - name: movie-review-redis
          type: STRICT_DNS
          lb_policy: ROUND_ROBIN
          load_assignment:
              cluster_name: movie-review-redis
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: movie-review-redis
                                      port_value: 6379

        - name: cast-info-service
          type: STRICT_DNS
          lb_policy: ROUND_ROBIN
          load_assignment:
              cluster_name: cast-info-service
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: cast-info-service
                                      port_value: 9999

        - name: cast-info-mongodb
          type: STRICT_DNS
          lb_policy: ROUND_ROBIN
          load_assignment:
              cluster_name: cast-info-mongodb
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: cast-info-mongodb
                                      port_value: 27017

        - name: cast-info-memcached
          type: STRICT_DNS
          lb_policy: ROUND_ROBIN
          load_assignment:
              cluster_name: cast-info-memcached
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: cast-info-memcached
                                      port_value: 11211

        - name: plot-service
          type: STRICT_DNS
          lb_policy: ROUND_ROBIN
          load_assignment:
              cluster_name: plot-service
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: plot-service
                                      port_value: 9999

        - name: plot-mongodb
          type: STRICT_DNS
          lb_policy: ROUND_ROBIN
          load_assignment:
              cluster_name: plot-mongodb
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: plot-mongodb
                                      port_value: 27017

        - name: plot-memcached
          type: STRICT_DNS
          lb_policy: ROUND_ROBIN
          load_assignment:
              cluster_name: plot-memcached
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: plot-memcached
                                      port_value: 11211

        - name: movie-info-service
          type: STRICT_DNS
          lb_policy: ROUND_ROBIN
          load_assignment:
              cluster_name: movie-info-service
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: movie-info-service
                                      port_value: 9999

        - name: movie-info-mongodb
          type: STRICT_DNS
          lb_policy: ROUND_ROBIN
          load_assignment:
              cluster_name: movie-info-mongodb
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: movie-info-mongodb
                                      port_value: 27017

        - name: movie-info-memcached
          type: STRICT_DNS
          lb_policy: ROUND_ROBIN
          load_assignment:
              cluster_name: movie-info-memcached
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: movie-info-memcached
                                      port_value: 11211

        - name: page-service
          type: STRICT_DNS
          lb_policy: ROUND_ROBIN
          load_assignment:
              cluster_name: page-service
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: page-service
                                      port_value: 9999
